* The jobmaster now copies /etc/hosts into jobslaves. (RBL-2963)
* The backend now allows EC2 calls to be run using user supplied credentials.
  (RBL-3039)
* The user's EC2 credentials are now validated by the EC2 web service.
  (RBL-3038)
* The EC2 backend calls now have common error handling. (RBL-3043)
* A backend call has been added to get all AMI builds for a particular
  user. (RBL-3053)

Web Front End Changes
---------------------
* Fixed a bug where the cook group page mistakenly referenced the "Images" 
  link instead of the "Manage Images" link. (RBL-3014)
* There is now a link on the account settings page to edit a user's EC2
  settings. (RBL-3029)
* There is now a link on the account settings page to clear a user's EC2 
  settings. (RBL-3045)


Changes in 4.1.1
================

Web Front End Changes
---------------------

* The "Domain Name" field, which was removed from the "New Product"
  page in version 4.1.0, has been restored. (RBL-3037)

Bug Fixes
---------------------

* Extra troves such as anaconda-custom selected through the web
  interface are now properly included in builds. (RBL-3011)
* Custom troves with names other than the default can now be used
  in builds. (RBL-2957)
* Packages with names starting with "kernel" that are not named "kernel"
  will no longer be pinned by default in generated images. (RBL-3000)
* domU-flavored images based on rPath Linux 2 now have the correct root
  device label. (RBL-3036)


Changes in 4.1.0
================

Web Front End Changes
---------------------

* New rBuilder installations are created using PostgreSQL as the repository
  database.  Existing installations are given a new plugin that will migrate
  existing SQLite repositories to PostgreSQL.  (RBL-2650)
* Upgrades from versions before 4.0.0 will no longer be possible with
  this version. Installations predating 4.0.0 will need to first
  be upgraded to version 4.0.1, then to this version. (RBL-2884)